docs/_static/css/custom.css
/* Dan Cole's naive attempt to update the styling 
.wy-side-nav-search, .wy-nav-top {
    background: #f26724;
}

*/

/* Temporary fix for https://github.com/rtfd/sphinx_rtd_theme/issues/417 */

.rst-content .highlight>pre {
    line-height: 18px;
}

.rubric {
    font-size: 125%;
    font-weight: 700;
    font-family: "Roboto Slab","ff-tisa-web-pro","Georgia",Arial,sans-serif;
}

/* Temporary fix to address table cells not wrapping */

/* Fix missing line-wrapping with Sphinx-RTD theme */
/* https://rackerlabs.github.io/docs-rackspace/tools/rtd-tables.html */

/* override table width restrictions */
@media screen and (min-width: 767px) {

    .wy-table-responsive table td {
       /* !important prevents the common CSS stylesheets from overriding
          this as on RTD they are loaded after this stylesheet */
       white-space: normal !important;
    }
 
    .wy-table-responsive {
       overflow: visible !important;
    }
}

